force-app/main/default/objects/Case/fields/Tertiary_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Sub_Type__c</fullName>
    <label>Tertiary Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Sub_Type__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abandoned In Portal</fullName>
            </value>
            <value>
                <fullName>Add/Remove Org from Profile</fullName>
            </value>
            <value>
                <fullName>Add/Update Contact Info on Profile</fullName>
            </value>
            <value>
                <fullName>Add Portal Access</fullName>
            </value>
            <value>
                <fullName>AP/LTP</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Cannot print certificate of completion</fullName>
            </value>
            <value>
                <fullName>Cardio</fullName>
            </value>
            <value>
                <fullName>Cintas</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Completion</fullName>
            </value>
            <value>
                <fullName>Coupon Provided</fullName>
            </value>
            <value>
                <fullName>Course Link</fullName>
            </value>
            <value>
                <fullName>CPR for the Professional Rescuer</fullName>
            </value>
            <value>
                <fullName>CPRO</fullName>
            </value>
            <value>
                <fullName>Create Account</fullName>
            </value>
            <value>
                <fullName>CRE Support</fullName>
            </value>
            <value>
                <fullName>Damaged/Defective</fullName>
            </value>
            <value>
                <fullName>Don&#39;t understand how to complete mission/lession/exam/course</fullName>
            </value>
            <value>
                <fullName>Email Sent</fullName>
            </value>
            <value>
                <fullName>EMR</fullName>
            </value>
            <value>
                <fullName>Error Message</fullName>
            </value>
            <value>
                <fullName>FA/CPR/AED</fullName>
            </value>
            <value>
                <fullName>First Aid/CPR/AED</fullName>
            </value>
            <value>
                <fullName>Freezing</fullName>
            </value>
            <value>
                <fullName>Full Service</fullName>
            </value>
            <value>
                <fullName>Grant Funded</fullName>
            </value>
            <value>
                <fullName>Incorrect Product/Amount</fullName>
            </value>
            <value>
                <fullName>Individual Pay</fullName>
            </value>
            <value>
                <fullName>Instructor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>