force-app/main/default/objects/Case/fields/Third_Response_Time_minutes__c.field-meta.xml
<CustomField>
    <fullName>Third_Response_Time_minutes__c</fullName>
    <description>Third Response Time (minutes)</description>
    <inlineHelpText>Third Response Time (minutes)</inlineHelpText>
    <label>Third Response Time (minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>