force-app/main/default/objects/Case/recordTypes/Data_Quality_Case.recordType-meta.xml
<RecordType>
    <fullName>Data_Quality_Case</fullName>
    <active>true</active>
    <businessProcess>Data Quality Case</businessProcess>
    <description>Record Type to be used when a user would like to request that an Account or Contact is merged or deleted.</description>
    <label>Data Quality Case</label>
</RecordType>