force-app/main/default/objects/Case/recordTypes/Learn_to_Swim_Facility_Registration.recordType-meta.xml
<RecordType>
    <fullName>Learn_to_Swim_Facility_Registration</fullName>
    <active>true</active>
    <businessProcess>Learn to Swim Registration</businessProcess>
    <description>Record type for Learn to Swim Facility Registration</description>
    <label>Learn to Swim Facility Registration</label>
</RecordType>