force-app/main/default/objects/Case/recordTypes/OLD_Community_Instructor_Case.recordType-meta.xml
<RecordType>
    <fullName>OLD_Community_Instructor_Case</fullName>
    <active>false</active>
    <businessProcess>Service Case Process</businessProcess>
    <description>The record type for tracking Community Instructor support cases.</description>
    <label>OLD Community Instructor Case</label>
</RecordType>