force-app/main/default/objects/Case/recordTypes/OLD_Community_Learner_Case.recordType-meta.xml
<RecordType>
    <fullName>OLD_Community_Learner_Case</fullName>
    <active>false</active>
    <businessProcess>Service Case Process</businessProcess>
    <description>The record type for tracking Community Learner support cases.</description>
    <label>OLD Community Learner Case</label>
</RecordType>