force-app/main/default/objects/Case/recordTypes/OLD_Community_Partner_Case.recordType-meta.xml
<RecordType>
    <fullName>OLD_Community_Partner_Case</fullName>
    <active>false</active>
    <businessProcess>Service Case Process</businessProcess>
    <description>The record type for tracking Community Partner support cases.</description>
    <label>OLD Community Partner Case</label>
</RecordType>