force-app/main/default/objects/Case/recordTypes/Read_Only_Invoicing.recordType-meta.xml
<RecordType>
    <fullName>Read_Only_Invoicing</fullName>
    <active>true</active>
    <businessProcess>Invoicing</businessProcess>
    <label>Read Only Invoicing</label>
</RecordType>