force-app/main/default/objects/Case/recordTypes/Read_Only_Non_Training_Case.recordType-meta.xml
<RecordType>
    <fullName>Read_Only_Non_Training_Case</fullName>
    <active>true</active>
    <businessProcess>Service Case Process</businessProcess>
    <description>Record type for Non training Record type once it is closed to make it read only</description>
    <label>Read Only Non-Training Case</label>
</RecordType>