force-app/main/default/objects/Case/recordTypes/Read_Only_RCS_PO.recordType-meta.xml
<RecordType>
    <fullName>Read_Only_RCS_PO</fullName>
    <active>true</active>
    <businessProcess>RCS PO</businessProcess>
    <label>Read Only RCS PO</label>
</RecordType>