force-app/main/default/objects/Case/recordTypes/Read_Only_Troubleshooting_Case.recordType-meta.xml
<RecordType>
    <fullName>Read_Only_Troubleshooting_Case</fullName>
    <active>true</active>
    <businessProcess>Service Case Process</businessProcess>
    <description>Record type for Troubleshooting Case Record type once it is closed to make it read only</description>
    <label>Read Only Troubleshooting Case</label>
</RecordType>