force-app/main/default/objects/Case/recordTypes/Sales_Case.recordType-meta.xml
<RecordType>
    <fullName>Sales_Case</fullName>
    <active>true</active>
    <businessProcess>Sales Case Process</businessProcess>
    <description>Process for Tracking Sales Related Cases</description>
    <label>Sales Case</label>
</RecordType>