force-app/main/default/objects/Case/recordTypes/Sales_Case_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Sales_Case_Read_Only</fullName>
    <active>true</active>
    <businessProcess>Sales Case Process</businessProcess>
    <description>This record type is for the sales case record type once it is closed to make it read only for the</description>
    <label>Sales Case Read Only</label>
</RecordType>