force-app/main/default/objects/Case/recordTypes/Service_Case_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Service_Case_Read_Only</fullName>
    <active>true</active>
    <businessProcess>Service Case Process</businessProcess>
    <description>This record type is for the service case record type once it is closed to make it read only for the</description>
    <label>Service Case Read Only</label>
</RecordType>