force-app/main/default/objects/Case/recordTypes/Troubleshooting_Case.recordType-meta.xml
<RecordType>
    <fullName>Troubleshooting_Case</fullName>
    <active>true</active>
    <businessProcess>Service Case Process</businessProcess>
    <description>Record type for Troubleshooting issues</description>
    <label>Troubleshooting Case</label>
</RecordType>