force-app/main/default/objects/Case/validationRules/Cannot_Update_Cases_with_New_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Update_Cases_with_New_Status</fullName>
    <active>true</active>
    <description>Service cases with a &quot;New&quot; status cannot be updated if they have the &quot;Invoicing&quot; type. The case status must be updated to be able to save case changes.</description>
    <errorConditionFormula>AND( 
(ISPICKVAL(Status,&quot;New&quot;)), 
(RecordType.DeveloperName = &quot;Invoicing&quot;) , 
(Change_Invoice_New_Status__c) == true, 
$Setup.Validation_Rules__c.Bypass_Rules__c = FALSE , 
ISCHANGED( OwnerId ) = false 
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>&quot;Invoicing&quot; type service cases with &quot;New&quot; status cannot be saved without updating the case status. Please change the case Status field.</errorMessage>
</ValidationRule>