force-app/main/default/objects/Case/validationRules/Require_Approval_Comment.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Approval_Comment</fullName>
    <active>true</active>
    <description>The Approval Comments field is required when the Business Approval field is populated</description>
    <errorConditionFormula>OR( 
AND( 
ISPICKVAL( BOS_Approval__c , &#39;Approved With Changes&#39;), 
ISBLANK(Approval_Comments__c),
OR(NOT(ISPICKVAL(Status, &#39;New&#39;) || ISPICKVAL(Status, &#39;New - Assigned&#39;)),
OwnerId = &#39;00Gd0000000SdP5&#39;),
 RecordType.DeveloperName = &#39;Invoicing&#39;

), 
AND ( 
ISPICKVAL( BOS_Approval__c , &#39;Not Approved&#39;), 
ISBLANK ( Approval_Comments__c ),
OR(NOT(ISPICKVAL(Status, &#39;New&#39;) || ISPICKVAL(Status, &#39;New - Assigned&#39;)),
OwnerId = &#39;00Gd0000000SdP5&#39;),
RecordType.DeveloperName = &#39;Invoicing&#39;
) 
)</errorConditionFormula>
    <errorDisplayField>Approval_Comments__c</errorDisplayField>
    <errorMessage>Please fill in Approval Comments</errorMessage>
</ValidationRule>