force-app/main/default/objects/Case/validationRules/Required_Agreementfor_Invoice_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Agreementfor_Invoice_Case</fullName>
    <active>true</active>
    <description>required When Invoicing Case Type = Price</description>
    <errorConditionFormula>AND(
OR( 
ISPICKVAL( Dispute_Issue__c , &#39;Price&#39;), 
ISPICKVAL( Dispute_Issue__c , &#39;Bad Address&#39;), 
ISPICKVAL( Dispute_Issue__c , &#39;Duplicate Invoice&#39;), 
ISPICKVAL( Dispute_Issue__c , &#39;Missing Payment&#39;), 
ISPICKVAL( Dispute_Issue__c , &#39;Misapplied Payment&#39;), 
ISPICKVAL( Dispute_Issue__c , &#39;Wrong Organization&#39;)
),
RecordType.DeveloperName = &#39;Invoicing&#39;, 
OR(
NOT(ISPICKVAL(Status, &#39;New&#39;) || ISPICKVAL(Status, &#39;New - Assigned&#39;)), 
OwnerId == &#39;00Gd0000000SdP5&#39;
),
ISPICKVAL(Agreement__c, &#39;&#39;), 
$Setup.Validation_Rules__c.Bypass_Rules__c = false 
)</errorConditionFormula>
    <errorDisplayField>Agreement__c</errorDisplayField>
    <errorMessage>Please Select Agreement</errorMessage>
</ValidationRule>