force-app/main/default/objects/Case/validationRules/Required_CRS_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_CRS_Number</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
OR( 
ISPICKVAL(Dispute_Issue__c, &quot;Duplicate Invoice&quot;), 
ISPICKVAL(Dispute_Issue__c, &quot;Price&quot;), 
ISPICKVAL(Dispute_Issue__c, &quot;Wrong Organization&quot;) 
), 
ISBLANK(CRS__c), 
OR(NOT(ISPICKVAL(Status, &#39;New&#39;) || ISPICKVAL(Status, &#39;New - Assigned&#39;)),
OwnerId = &#39;00Gd0000000SdP5&#39;),
RecordType.DeveloperName = &#39;Invoicing&#39;, 
ISPICKVAL(Type, &#39;Invoicing&#39;), 
$Setup.Validation_Rules__c.Bypass_Rules__c = false 
)</errorConditionFormula>
    <errorDisplayField>CRS__c</errorDisplayField>
    <errorMessage>Please provide CRS #</errorMessage>
</ValidationRule>