force-app/main/default/objects/Case/validationRules/Required_for_Approver.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_for_Approver</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
RecordType.DeveloperName = &#39;Invoicing&#39;,
OR(NOT(ISPICKVAL(Status, &#39;New&#39;) || ISPICKVAL(Status, &#39;New - Assigned&#39;)),
OwnerId = &#39;00Gd0000000SdP5&#39;),
NOT(ISBLANK( TEXT( BOS_Approval__c )) ), 
ISBLANK( Approver_Lookup__c ) 
)</errorConditionFormula>
    <errorDisplayField>Approver_Lookup__c</errorDisplayField>
    <errorMessage>Please provide Approver</errorMessage>
</ValidationRule>