force-app/main/default/objects/Case/validationRules/Required_for_No_Proof_of_Payment_Attache.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_for_No_Proof_of_Payment_Attache</fullName>
    <active>true</active>
    <description>required When Invoicing Case Type = Missing Payment</description>
    <errorConditionFormula>AND( 
RecordType.DeveloperName = &#39;Invoicing&#39;, 
ISPICKVAL(Type , &#39;Invoicing&#39;), 
NOT(ISPICKVAL(Status, &#39;New&#39;) || ISPICKVAL(Status, &#39;New - Assigned&#39;)),
ISPICKVAL(Dispute_Issue__c , &#39;Missing Payment&#39;), 
ISBLANK(Why_No_Proof_of_Payment_Attached__c) 
)</errorConditionFormula>
    <errorDisplayField>Why_No_Proof_of_Payment_Attached__c</errorDisplayField>
    <errorMessage>Please specify a reason for not having attachment for proof of payment!</errorMessage>
</ValidationRule>