force-app/main/default/objects/Case/validationRules/Required_for_Other_Agreement.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_for_Other_Agreement</fullName>
    <active>true</active>
    <description>Required when Agreement is selected as &quot;Other&quot;</description>
    <errorConditionFormula>AND( 
RecordType.DeveloperName = &#39;Invoicing&#39;, 
NOT(ISPICKVAL(Status, &#39;New&#39;) || ISPICKVAL(Status, &#39;New - Assigned&#39;)), 
ISPICKVAL(Agreement__c , &#39;Other&#39;), 
ISBLANK(Agreement_Other__c), 
$Setup.Validation_Rules__c.Bypass_Rules__c = false 
)</errorConditionFormula>
    <errorDisplayField>Agreement_Other__c</errorDisplayField>
    <errorMessage>When Agreement is &quot;Other&quot;, you must provide Other Agreement Value</errorMessage>
</ValidationRule>